# CSC417

./: .gitignore  CMakeLists.txt  README.md
homework/: CMakeLists.txt
homework/Assignment1/: CMakeLists.txt  main.cpp
homework/Assignment1/include/: backward_euler.h  forward_euler.h  runge_kutta.h  symplectic_euler.h
homework/Assignment2/: CMakeLists.txt  main.cpp
homework/Assignment2/include/: linearly_implicit_euler.h
homework/Assignment2/src/: T_particle.cpp  V_gravity_particle.cpp  V_spring_particle_particle.cpp  assemble_forces.cpp  assemble_stiffness.cpp  d2V_spring_particle_particle_dq2.cpp  dV_gravity_particle_dq.cpp  dV_spring_particle_particle_dq.cpp  fixed_point_constraints.cpp  mass_matrix_particles.cpp
homework/Assignment3/: CMakeLists.txt  assignment_setup.h
homework/Assignment3/include/: dphi_linear_tetrahedron_dX.h  implicit_euler.h  linearly_implicit_euler.h  newtons_method.h  quadrature_single_point.h
homework/Assignment3/src/: T_linear_tetrahedron.cpp  V_linear_tetrahedron.cpp  V_spring_particle_particle.cpp  assemble_forces.cpp  assemble_stiffness.cpp  build_skinning_matrix.cpp  d2V_linear_tetrahedron_dq2.cpp  d2psi_neo_hookean_dF2.cpp  dV_linear_tetrahedron_dq.cpp  dV_spring_particle_particle_dq.cpp  dphi_linear_tetrahedron_dX.cpp  dpsi_neo_hookean_dF.cpp  fixed_point_constraints.cpp  mass_matrix_linear_tetrahedron.cpp  mass_matrix_mesh.cpp  phi_linear_tetrahedron.cpp  pick_nearest_vertices.cpp  psi_neo_hookean.cpp
homework/Assignment5/: CMakeLists.txt  assignment_setup.h
homework/Assignment5/src/: inertia_matrix.cpp  rodrigues.cpp  (+3 more)
